[build-system]
requires = ["setuptools>=69","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BiomedicalAugmentation-for-Text"
version = "0.0.1"
authors = [
  { name="LauraBergomi", email="laura.bergomi01@universitadipavia.it" },
]
description = "A Biomedical domain-specific Text Augmentation tool"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "License :: Free for non-commercial use",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent"
]